--- a/index.html
+++ b/index.html
@@ -14,25 +14,43 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <style>
-        /* Allgemeine Stile */
+        /* Hintergrund mit animiertem Farbverlauf */
         body {
             margin: 0;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: #ffffff;
             color: #333;
             text-align: center;
+            background: linear-gradient(-45deg, #ffffff, #f2f2f2, #ffe6e6, #ffffff);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
             transition: background-color 0.3s, color 0.3s;
         }
 
+        @keyframes gradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Header mit Logo und Titel */
         header {
-            background-color: #cc0000; /* ÖBB Rot */
+            background-color: #cc0000;
             color: white;
             padding: 20px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+            flex-wrap: wrap;
         }
 
-        h1 {
+        header img {
+            height: 50px;
+            width: auto;
+        }
+
+        header h1 {
             margin: 0;
             font-size: 1.8em;
         }
@@ -60,7 +78,7 @@
 
         .button-list a:hover {
             background-color: #a60000;
-            transform: translateY(-5px); /* Schwebender Effekt */
+            transform: translateY(-5px);
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
@@ -71,15 +89,16 @@
             transition: color 0.3s;
         }
 
-        /* Dark Mode Styles */
         @media (prefers-color-scheme: dark) {
             body {
-                background-color: #121212; /* Dunkler Hintergrund */
-                color: #f0f0f0; /* Helle Schriftfarbe */
+                background: linear-gradient(-45deg, #121212, #1e1e1e, #2c0000, #121212);
+                background-size: 400% 400%;
+                animation: gradient 15s ease infinite;
+                color: #f0f0f0;
             }
 
             header {
-                background-color: #ff4d4d; /* Helleres Rot für Dark Mode */
+                background-color: #ff4d4d;
                 box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             }
 
@@ -90,7 +109,6 @@
 
             .button-list a:hover {
                 background-color: #e60000;
-                transform: translateY(-5px); /* Schwebender Effekt */
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
             }
 
@@ -103,6 +121,7 @@
 <body>
 
     <header>
+        <img src="logo.png" alt="Logo">
         <h1>Regionalmanager APP</h1>
     </header>
 
@@ -119,4 +138,3 @@
 
 </body>
 </html>
-
