--- a/index.html
+++ b/index.html
@@ -1,140 +1,162 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regionalmanager-APP</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Regionalmanager-APP</title>
 
-    <!-- iPhone/iPad Home-Screen Icon -->
-    <link rel="apple-touch-icon" href="logo.png">
+  <link rel="apple-touch-icon" href="logo.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Regionalmanager">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <!-- iPhone-Kompatibilität -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Regionalmanager">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      color: #333;
+      text-align: center;
+      background: linear-gradient(-45deg, #ffffff, #f2f2f2, #ffe6e6, #ffffff);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+    }
 
-    <style>
-        /* Hintergrund mit animiertem Farbverlauf */
-        body {
-            margin: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            color: #333;
-            text-align: center;
-            background: linear-gradient(-45deg, #ffffff, #f2f2f2, #ffe6e6, #ffffff);
-            background-size: 400% 400%;
-            animation: gradient 15s ease infinite;
-            transition: background-color 0.3s, color 0.3s;
-        }
+    @keyframes gradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-        @keyframes gradient {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
+    header {
+      background-color: #cc0000;
+      color: white;
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+      flex-wrap: wrap;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
 
-        /* Header mit Logo und Titel */
-        header {
-            background-color: #cc0000;
-            color: white;
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 15px;
-            flex-wrap: wrap;
-        }
+    header img {
+      height: 50px;
+      width: auto;
+    }
 
-        header img {
-            height: 50px;
-            width: auto;
-        }
+    header h1 {
+      margin: 0;
+      font-size: 1.8em;
+    }
 
-        header h1 {
-            margin: 0;
-            font-size: 1.8em;
-        }
+    .button-list {
+      list-style: none;
+      padding: 0;
+      margin: 30px auto;
+      max-width: 400px;
+    }
 
-        .button-list {
-            list-style: none;
-            padding: 0;
-            margin: 30px 0;
-        }
+    .button-list li {
+      margin: 15px 0;
+    }
 
-        .button-list li {
-            margin: 15px 0;
-        }
+    .button-list a {
+      display: block;
+      background-color: #cc0000;
+      color: white;
+      text-decoration: none;
+      padding: 15px 25px;
+      border-radius: 10px;
+      font-size: 1.1em;
+      position: relative;
+      overflow: hidden;
+      transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
+    }
 
-        .button-list a {
-            display: inline-block;
-            background-color: #cc0000;
-            color: white;
-            text-decoration: none;
-            padding: 15px 25px;
-            border-radius: 10px;
-            font-size: 1.1em;
-            transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
-        }
+    .button-list a::before {
+      content: '';
+      position: absolute;
+      left: -100%;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.15);
+      transition: left 0.4s ease;
+    }
 
-        .button-list a:hover {
-            background-color: #a60000;
-            transform: translateY(-5px);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
+    .button-list a:hover::before {
+      left: 0;
+    }
 
-        footer {
-            font-size: 0.9em;
-            color: #666;
-            margin-bottom: 20px;
-            transition: color 0.3s;
-        }
+    .button-list a:hover {
+      background-color: #a60000;
+      transform: translateX(5px);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    }
 
-        @media (prefers-color-scheme: dark) {
-            body {
-                background: linear-gradient(-45deg, #121212, #1e1e1e, #2c0000, #121212);
-                background-size: 400% 400%;
-                animation: gradient 15s ease infinite;
-                color: #f0f0f0;
-            }
+    iframe {
+      width: 95%;
+      max-width: 1000px;
+      height: 600px;
+      border: none;
+      margin: 30px auto;
+      display: block;
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    }
 
-            header {
-                background-color: #ff4d4d;
-                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-            }
+    footer {
+      font-size: 0.9em;
+      color: #666;
+      margin-bottom: 20px;
+    }
 
-            .button-list a {
-                background-color: #ff4d4d;
-                color: #f0f0f0;
-            }
+    @media (prefers-color-scheme: dark) {
+      body {
+        background: linear-gradient(-45deg, #121212, #1e1e1e, #2c0000, #121212);
+        color: #f0f0f0;
+      }
 
-            .button-list a:hover {
-                background-color: #e60000;
-                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            }
+      header {
+        background-color: #ff4d4d;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+      }
 
-            footer {
-                color: #bbb;
-            }
-        }
-    </style>
+      .button-list a {
+        background-color: #ff4d4d;
+        color: #f0f0f0;
+      }
+
+      .button-list a:hover {
+        background-color: #e60000;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      }
+
+      footer {
+        color: #bbb;
+      }
+    }
+  </style>
 </head>
 <body>
 
-    <header>
-        <img src="logo.png" alt="Logo">
-        <h1>Regionalmanager APP</h1>
-    </header>
+  <header>
+    <img src="logo.png" alt="Logo">
+    <h1>Regionalmanager APP</h1>
+  </header>
 
-    <ul class="button-list">
-        <li><a href="https://etd.oebb-produktion.at/FZGSearch" target="_blank">ETD Fahrzeugsuche</a></li>
-        <li><a href="https://zumber.oebb.at/zub/train/search" target="_blank">ZUMBER Mangelsuche</a></li>
-        <li><a href="https://etd.oebb-produktion.at/Wagenliste" target="_blank">ETD Wagenliste</a></li>
-        <li><a href="https://etd.oebb-produktion.at/TrainDelayReasons" target="_blank">ETD Personalsuche</a></li>
-    </ul>
+  <ul class="button-list">
+    <li><a href="https://etd.oebb-produktion.at/FZGSearch" target="_blank">ETD Fahrzeugsuche</a></li>
+    <li><a href="https://zumber.oebb.at/zub/train/search" target="_blank">ZUMBER Mangelsuche</a></li>
+    <li><a href="https://etd.oebb-produktion.at/Wagenliste" target="_blank">ETD Wagenliste</a></li>
+    <li><a href="https://etd.oebb-produktion.at/TrainDelayReasons" target="_blank">ETD Personalsuche</a></li>
+  </ul>
 
-    <footer>
-        <p>by ANS85-CMD</p>
-    </footer>
+  <iframe src="https://fahrplan.oebb.at/bin/stboard.exe/dn?L=vs_liveticker&evaId=8100002&boardType=dep&productsFilter=1011111111011&dirInput=&tickerID=dep&start=yes&eqstops=false&showJourneys=12&additionalTime=0"></iframe>
+
+  <footer>
+    <p>by ANS85-CMD</p>
+  </footer>
 
 </body>
 </html>
