--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Regionalmanager-APP</title>
 
+  <!-- iOS-Support -->
   <link rel="apple-touch-icon" href="logo.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="Regionalmanager">
@@ -150,6 +151,7 @@
     <li><a href="https://zumber.oebb.at/zub/train/search" target="_blank">ZUMBER Mangelsuche</a></li>
     <li><a href="https://etd.oebb-produktion.at/Wagenliste" target="_blank">ETD Wagenliste</a></li>
     <li><a href="https://etd.oebb-produktion.at/TrainDelayReasons" target="_blank">ETD Personalsuche</a></li>
+    <li><a href="#" onclick="location.reload(); return false;">🔄 Seite aktualisieren</a></li>
   </ul>
 
   <iframe src="https://fahrplan.oebb.at/bin/stboard.exe/dn?L=vs_liveticker&evaId=8100002&boardType=dep&productsFilter=1011111111011&dirInput=&tickerID=dep&start=yes&eqstops=false&showJourneys=12&additionalTime=0"></iframe>
@@ -160,3 +162,4 @@
 
 </body>
 </html>
+
