--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Regionalmanager-APP</title>
 
-  <!-- iOS-Support -->
+  <!-- iOS Web-App Unterstützung -->
   <link rel="apple-touch-icon" href="logo.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="Regionalmanager">
@@ -17,15 +17,29 @@
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       color: #333;
       text-align: center;
-      background: linear-gradient(-45deg, #ffffff, #f2f2f2, #ffe6e6, #ffffff);
-      background-size: 400% 400%;
-      animation: gradient 15s ease infinite;
+      position: relative;
+      background: url("Lok.jpg") no-repeat center center fixed;
+      background-size: cover;
+      overflow-x: hidden;
     }
 
-    @keyframes gradient {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    /* Weiche Überlagerung für bessere Lesbarkeit */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: linear-gradient(135deg, rgba(255,255,255,0.85), rgba(255,240,240,0.7));
+      backdrop-filter: blur(4px);
+      z-index: -1;
+      animation: fadeIn 2s ease-in;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     header {
@@ -95,26 +109,18 @@
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
 
-    iframe {
-      width: 95%;
-      max-width: 1000px;
-      height: 600px;
-      border: none;
-      margin: 30px auto;
-      display: block;
-      border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    }
-
     footer {
       font-size: 0.9em;
       color: #666;
-      margin-bottom: 20px;
+      margin: 40px 0 20px 0;
     }
 
     @media (prefers-color-scheme: dark) {
+      body::before {
+        background: linear-gradient(135deg, rgba(20,20,20,0.8), rgba(50,0,0,0.6));
+      }
+
       body {
-        background: linear-gradient(-45deg, #121212, #1e1e1e, #2c0000, #121212);
         color: #f0f0f0;
       }
 
@@ -151,10 +157,9 @@
     <li><a href="https://zumber.oebb.at/zub/train/search" target="_blank">ZUMBER Mangelsuche</a></li>
     <li><a href="https://etd.oebb-produktion.at/Wagenliste" target="_blank">ETD Wagenliste</a></li>
     <li><a href="https://etd.oebb-produktion.at/TrainDelayReasons" target="_blank">ETD Personalsuche</a></li>
+    <li><a href="https://lokfinder.oebb.at" target="_blank">🔎 Lokfinder öffnen</a></li>
     <li><a href="#" onclick="location.reload(); return false;">🔄 Seite aktualisieren</a></li>
   </ul>
-
-  <iframe src="https://fahrplan.oebb.at/bin/stboard.exe/dn?L=vs_liveticker&evaId=8100002&boardType=dep&productsFilter=1011111111011&dirInput=&tickerID=dep&start=yes&eqstops=false&showJourneys=12&additionalTime=0"></iframe>
 
   <footer>
     <p>by ANS85-CMD</p>
@@ -162,4 +167,3 @@
 
 </body>
 </html>
-
