--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   </header>
 
   <ul class="button-list">
-    <li><a href="https://fahrplan.oebb.at/webapp/#!P|ZL!H|941739" target="_blank">Züge/Linien - ÖBB</a></li>
+    <li><a href="redirect.html" target="_blank">Züge/Linien - ÖBB</a></li>
     <li><a href="https://etd.oebb-produktion.at/FZGSearch" target="_blank">ETD Fahrzeugsuche</a></li>
     <li><a href="https://zumber.oebb.at/zub/train/search" target="_blank">ZUMBER Mangelsuche</a></li>
     <li><a href="https://etd.oebb-produktion.at/Wagenliste" target="_blank">ETD Wagenliste</a></li>
@@ -168,4 +168,5 @@
 
 </body>
 </html>
+
 
